feat:criação de filtros dos relatórios, documentação README para rodar o projeto
